spacing issue resolved

--- a/dashboard/src/index.css
+++ b/dashboard/src/index.css
@@ -6,6 +6,32 @@
   padding: 0;
 
   font-family: "Lora";
+  ol li {
+    margin-bottom: "10px";
+  }
+  ol li a {
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 
+}
+
+body {
+  ol li {
+    margin-bottom: "10px";
+
+  }
+  ol li a {
+    display: inline-block;
+    vertical-align: top;
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+  }
 }
 
